Add new January/February program

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Pilates Retreats – Волшебные выходные для тела и души" />
+    <meta property="og:description" content="Присоединяйтесь к уникальной программе «Познай свое тело» с 18 по 20 октября! Вдохновляющие практики, детокс-меню и полное перезагрузка в окружении природы." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pilatesretreat.org/" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
